fixed bug with boucing arrow on mobile

--- a/src/sections/Character/Character.Styles.module.css
+++ b/src/sections/Character/Character.Styles.module.css
@@ -122,6 +122,7 @@
   margin-top: -60px;
   color: var(--text-color);
   animation: bounce 1s ease-in-out infinite;
+  visibility: hidden;
 }
 
 @media (width >= 800px) {
@@ -134,6 +135,9 @@
       max-width: 450px;
       width: 450px;
     }
+  }
+  .arrow {
+    visibility: visible;
   }
 }
 
